feat(api): add research address by api
